Fixed spacing

--- a/assets/css/scss/_test-two.scss
+++ b/assets/css/scss/_test-two.scss
@@ -3,6 +3,7 @@
     .title {
         font-size: 40px;
         font-weight: 700;
+        margin-top: 0;
     }
     .subtitle {
         color: $secondary-color;
@@ -29,7 +30,7 @@
                 object-fit: cover;
             }
             .body {
-                padding: 16px;
+                padding: 24px 16px;
                 display: flex;
                 flex-direction: column;
                 height: 100%;
