--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,6 +115,7 @@ footer .container .logo {
 .test-two .title {
   font-size: 40px;
   font-weight: 700;
+  margin-top: 0;
 }
 .test-two .subtitle {
   color: #282c2e;
@@ -145,7 +146,7 @@ footer .container .logo {
   object-fit: cover;
 }
 .test-two .cards .card .body {
-  padding: 16px;
+  padding: 24px 16px;
   display: flex;
   flex-direction: column;
   height: 100%;
